Added completed submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "MarsBuddyBlank"]
 	path = MarsBuddyBlank
 	url = https://github.com/jamesleeht/MarsBuddyBlank
+[submodule "MarsBuddyComplete"]
+	path = MarsBuddyComplete
+	url = https://github.com/jamesleeht/MarsBuddyComplete
